<resources>

    <string name="app_name">Крипто Курсы</string>
    <string name="title_home">Курс</string>
    <string name="title_cards">Тикеры</string>
    <string name="title_settings">Настройки</string>

    <!-- RateFragment -->
    <string name="top_value_fragment">2 835,57 USD</string>
    <string name="left_value_fragment">BTC</string>
    <string name="right_value_fragment">USD</string>
    <string name="switch_imagebutton">Switch currencies</string>

    <string name="option_one">день</string>
    <string name="option_two">неделя</string>
    <string name="option_three">месяц</string>
    <string name="option_four">год</string>

    <string name="updating">Обновление&#8230;</string>

    <!-- Action bar strings -->
    <string name="menu_item_refresh">Обновить курс</string>
    <string name="menu_item_sort">Сортировать</string>
    <string name="menu_item_hide">Скрыть панель подписок</string>

    <!-- Currencies titles -->
    <string name="title_btc">Bitcoin</string>

    <!-- Dialogs -->
    <string name="title_create_dialog_name">Выберите пару</string>
    <string name="title_label_dialog_name">Уведомить при цене</string>
    <string name="title_current_price">Текущая цена:</string>
    <string name="title_change">Изменение:</string>
    <string name="title_till">До:</string>

    <string name="title_dialog_cancel_btn">ОТМЕНА</string>
    <string name="title_dialog_add_btn">ДОБАВИТЬ</string>

    <string name="title_hint_price">Введите цену</string>
    <string name="title_hint_percent">Введите проценты</string>
    <string name="title_checkbox_percent">изменения в процентах</string>

    <string name="title_search_dialog_name">Поиск</string>
    <string name="title_search_dialog_hint">Введите название&#8230;</string>

    <!-- Snackbar messages -->
    <string name="title_cardview_removed">Элемент удален</string>
    <string name="title_cardview_undo">Отмена</string>

    <!-- Chart strings -->
    <string name="no_data_text">Данный график недоступен.</string>

    <!-- errors -->
    <string name="empty_value">Пустой текст!</string>
    <string name="unable_to_load_from_server">Не удалось загрузить с сервера!</string>
    <string name="connection_error">Ошибка подлючения. Попробуйте позже.</string>
    <string name="server_error">Ошибка сервера! Попробуйте позже.</string>
    <string name="error_loading_ticker">Не удалось отправить тикер. Попробуйте позже.</string>
    <string name="error_loading_ticker_try_again">Не удалось отправить тикер. Попробуйте еще раз.</string>
    <string name="error_deleting_ticker">Не удалось удалить тикер. Попробуйте позже.</string>
    <string name="error_deleting_subscribe">Не удалось удалить подписку. Попробуйте позже.</string>
    <string name="error_occurred">Произошла ошибка!</string>
    <string name="error_pair_already_added">Это пара уже добавлена!</string>
    <string name="error_subscribe_already_added">Это уведомление уже добавлено!</string>
    <string name="error_wrong_data">Неверные данные!</string>

    <string name="error_service_unavailable">Сервис Google Play недоступен!</string>
    <string name="payment_error">Ошибка оплаты!</string>

    <!-- Edittext errors -->
    <string name="error_empty_value">Введите цену!</string>
    <string name="error_wrong_format">Неправильный формат строки!</string>
    <string name="error_percent_max">Введите число не более 200%!</string>
    <string name="error_percent_double">Введите не более 4 цифр после запятой!</string>

    <!-- TickerFragment -->
    <string name="title_no_tickers">Добавьте тикеры, чтобы отслеживать криптовалюты.</string>

    <!-- SettingsFragment -->
    <string name="title_crypto_display">Отображение криптовалют</string>
    <string name="title_default_pair">Пара по умолчанию на главном экране</string>
    <string name="title_display_price_change">Отображать процент изменения</string>
    <string name="title_notification_settings">Настройки уведомлений</string>
    <string name="title_about_developer">О разработчике</string>

    <string name="title_display_codes">коды</string>
    <string name="title_display_titles">названия</string>

    <string name="title_price_change_hour">1 час</string>
    <string name="title_price_change_day">24 часа</string>
    <string name="title_price_change_week">7 дней</string>

    <string name="title_notification_sound">Включить звук уведомлений</string>
    <string name="title_notification_vibration">Включить вибрацию уведомлений</string>

    <!-- Popup window -->
    <string name="string_rbtn_title">по названию</string>
    <string name="string_rbtn_price">по цене</string>
    <string name="string_rbtn_market_cap">по капитализации</string>
    <string name="string_rbtn_growth_percent">по % роста за</string>

    <string name="string_popup_ok">OK</string>

    <!-- About gorgeous developer -->
    <string name="my_name">Джавид Халилов</string>
    <string name="my_email">djavid10@yandex.ru</string>

    <string name="hint_fixed_price">Здесь необходимо ввести полную цену,
        по достижении которой вы хотите получить уведомление.</string>
    <string name="hint_percent">Здесь необходимо ввести процент отклонения от цены,
        при котором будут приходить повторяющиеся уведомления.</string>

    <!-- PurchaseDialogFragment -->
    <string name="title_purchase_dialog_name">Доступ к уведомлениям</string>
    <string name="purchase_info_1">В бесплатной версии приложения вы можете иметь не более
        чем <b>пять уведомлений</b> на всех тикерах одновременно.</string>
    <string name="purchase_info_2">Оплатите, чтобы получить доступ к <b>неограниченному количеству уведомлений</b>.</string>
    <string name="title_purchase_btn">Приобрести</string>

    <!-- Purchase -->
    <string name="successful_purchase">Покупка успешно завершена!</string>

    <!-- DateFormatter -->
    <string-array name="month_titles">
        <item>Янв</item>
        <item>Фев</item>
        <item>Мар</item>
        <item>Апр</item>
        <item>Май</item>
        <item>Июн</item>
        <item>Июл</item>
        <item>Авг</item>
        <item>Сен</item>
        <item>Окт</item>
        <item>Ноя</item>
        <item>Дек</item>
    </string-array>

    <string-array name="country_currencies">
        <item>доллар</item>
        <item>евро</item>
        <item>канадский доллар</item>
        <item>юань</item>
        <item>йена</item>
        <item>польский злотый</item>
        <item>фунт стерлингов</item>
        <item>рубль</item>
        <item>гривна</item>
    </string-array>

</resources>
