<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingPrefix, ContentDescription"
    tools:context="com.djavid.bitcoinrate.view.fragment.SettingsFragment"
    android:id="@+id/ll_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCardBackground"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_crypto_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"

        android:textColor="@color/colorSettingsText"
        android:textSize="15sp"
        android:text="@string/title_crypto_display"
        />

    <info.hoang8f.android.segmented.SegmentedGroup
        android:id="@+id/segmented_btn_crypto_display"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal"
        segmentedgroup:sc_tint_color="@color/colorSettingsAccent"
        segmentedgroup:sc_border_width="1dp"
        segmentedgroup:sc_corner_radius="10dp">

        <RadioButton
            android:id="@+id/btn_codes"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:checked="true"
            android:text="@string/title_display_codes"
            style="@style/RadioButton"
            />

        <RadioButton
            android:id="@+id/btn_titles"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/title_display_titles"
            style="@style/RadioButton"
            />

    </info.hoang8f.android.segmented.SegmentedGroup>


    <TextView
        android:id="@+id/tv_display_price_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"

        android:textColor="@color/colorSettingsText"
        android:textSize="15sp"
        android:text="@string/title_display_price_change"
        />

    <info.hoang8f.android.segmented.SegmentedGroup
        android:id="@+id/segmented_btn_price_change"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal"
        segmentedgroup:sc_tint_color="@color/colorSettingsAccent"
        segmentedgroup:sc_border_width="1dp"
        segmentedgroup:sc_corner_radius="10dp">

        <RadioButton
            android:id="@+id/btn_hour"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:checked="true"
            android:text="@string/title_price_change_hour"
            style="@style/RadioButton"
             />

        <RadioButton
            android:id="@+id/btn_day"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/title_price_change_day"
            style="@style/RadioButton"
             />

        <RadioButton
            android:id="@+id/btn_week"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/title_price_change_week"
            style="@style/RadioButton"
            />

    </info.hoang8f.android.segmented.SegmentedGroup>


    <TextView
        android:id="@+id/tv_notification_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/colorSettingsText"
        android:textSize="15sp"
        android:text="@string/title_notification_settings" />

    <Switch
        android:id="@+id/switch_sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="15sp"
        android:text="@string/title_notification_sound" />

    <Switch
        android:id="@+id/switch_vibration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="15sp"
        android:text="@string/title_notification_vibration" />


    <Button
        android:id="@+id/btn_about_developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/about_btn_bg"
        android:textSize="16sp"
        android:textColor="@color/colorCardTitleBackground"

        android:text="@string/title_about_developer" />



</LinearLayout>
