<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingPrefix, ContentDescription"
    tools:context="com.djavid.bitcoinrate.view.dialog.CreateLabelDialog"
    android:id="@+id/rl_label_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_gravity="center">


    <TextView
        android:id="@+id/tv_create_dialog_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_label_dialog_name"
        android:textColor="@color/colorLabelDialogTitle"
        android:lineSpacingExtra="8sp"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"
        android:layout_marginStart="25dp"
        android:layout_marginTop="21dp" />

    <TextView
        android:id="@+id/tv_current_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/tv_create_dialog_name"
        android:lineSpacingExtra="8sp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/title_current_price"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_price_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/tv_current_price"
        android:layout_alignBottom="@id/tv_current_price"
        android:fontFamily="monospace"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/tv_current_price"
        android:lineSpacingExtra="8sp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/title_change"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_change_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/tv_change"
        android:layout_alignBottom="@id/tv_change"
        android:fontFamily="monospace"
        android:textSize="15sp" />


    <LinearLayout
        android:id="@+id/ll_price_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_change"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:hint="@string/title_hint_price"
            android:textColorHint="@color/colorEditTextHint"
            android:textColorHighlight="@color/colorEditTextBorder"
            android:textColor="@color/colorEditTextHint"
            android:textColorLink="@color/colorEditTextBorder"
            android:shadowColor="@color/colorEditTextBorder"
            android:textCursorDrawable="@null"
            android:inputType="numberDecimal"
            android:maxLength="15"
            app:backgroundTint="@color/colorEditTextBorder" />

        <ImageView
            android:id="@+id/iv_help"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_info_outline_black_24px"
            android:tint="@color/colorTint"
            android:layout_gravity="center_vertical" />

    </LinearLayout>


    <CheckBox
        android:id="@+id/cb_percent_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_price_input"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/title_checkbox_percent"
        android:textColor="@color/colorEditTextHint"
        app:buttonTint="@color/colorCheckBoxButton" />


    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cb_percent_change"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12.5dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="7dp">

        <TextView
            android:id="@+id/tv_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:paddingTop="11dp"
            android:paddingBottom="9dp"
            android:paddingStart="9dp"
            android:paddingEnd="9dp"
            android:layout_marginEnd="9dp"
            android:textSize="14sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorPrimary"
            android:text="@string/title_dialog_cancel_btn" />

        <TextView
            android:id="@+id/tv_create_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:paddingTop="11dp"
            android:paddingBottom="9dp"
            android:paddingStart="9dp"
            android:paddingEnd="9dp"
            android:textSize="14sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorPrimary"
            android:text="@string/title_dialog_add_btn" />

    </LinearLayout>



</RelativeLayout>
